--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAM G SAFARIS</title>
+    <title>SAM G Safaris</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Capture.PNG" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -31,8 +31,8 @@
     </section>
 
     <section class="description">
-        <h1>SAM G SAFARIS</h1>
-        <p>At SAM G SAFARIS, we embody a commitment to excellence that sets us apart in the industry. With meticulous attention to detail, unparalleled customer service, and a passion for creating unforgettable experiences, we redefine the standards of exceptional travel. Our team of experienced guides are not just experts in their fields, but passionate storytellers who bring destinations to life with vibrant narratives and insider knowledge. From meticulously crafted itineraries to personalized touches that cater to every guest's needs, we spare no effort in ensuring that every aspect of our tours exceeds expectations. At SAM G SAFARIS, we don't just offer trips; we deliver journeys that linger in the memory, forging connections and inspiring wanderlust for a lifetime.</p>
+        <h1>SAM G Safaris</h1>
+        <p>At SAM G Safaris, we embody a commitment to excellence that sets us apart in the industry. With meticulous attention to detail, unparalleled customer service, and a passion for creating unforgettable experiences, we redefine the standards of exceptional travel. Our team of experienced guides are not just experts in their fields, but passionate storytellers who bring destinations to life with vibrant narratives and insider knowledge. From meticulously crafted itineraries to personalized touches that cater to every guest's needs, we spare no effort in ensuring that every aspect of our tours exceeds expectations. At SAM G SAFARIS, we don't just offer trips; we deliver journeys that linger in the memory, forging connections and inspiring wanderlust for a lifetime.</p>
     </section>
 
     <section class="calendar">
